--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Dinosaur Designs</title>
+  <title>Dinos 'R' Us</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -34,7 +37,7 @@
 
     <h2> Stegosaurus </h2>
     <figure>
-      <img src="images/iguanodon.jpg" alt="">
+      <img src="images/stegosaurus.jpg" alt="">
       <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
     </figure>
 
